# forkscanner

./: .compose.env  .env  .gitignore  :wq  Cargo.toml  LICENSE  README.md  WALKTHROUGH.md  docker-compose.yaml  nodes_setup.sql  setup_test.sh
docker/: Dockerfile
migrations/2021-10-25-025707_initial_setup/: down.sql  up.sql
migrations/2021-11-05-100916_add_chaintips/: down.sql  up.sql
migrations/2022-01-24-094113_double-spends/: down.sql  up.sql
migrations/2022-03-28-095602_add-inflation-checks/: down.sql  up.sql
migrations/2022-07-04-124212_new-pubsub-endpoints/: down.sql  up.sql
migrations/2022-10-24-122531_update-tx-addresses/: down.sql  up.sql
migrations/2023-09-18-084902_alter-tx-addr-key/: down.sql  up.sql
scripts/: clear_tables.sql  init_db.sh  nodes_setup.sql  setup.sql  setup_test.sh  truncate.sql
scripts/subscribe-test/: add-watch.js  dupe-check.js  package.json  test.js  unwatch.js  watch.js
spec/: db_schema.md  spec.md
src/: lib.rs  main.rs  models.rs  scanner.rs  schema.rs  service.rs
src/data/: blockheaders1.json  blocks1.txt  match_children_tips.json  setup_match_children.sql
test/: main.py
tests/: rpc_stub.rs
tests/data/: blockref.txt  blocks.txt  headers.txt
