[package]
name = "forkscanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27"
bitcoincore-rpc = "0.14"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres"] }
dotenv = "0.15"
env_logger = "0.9"
hex = "0.4"
jsonrpc = "0.12"
jsonrpc-http-server = "18.0.0"
log = "0.4"
mockall = "0.11"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
