[package]
name = "forkscanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1.2"
bitcoin = "0.29"
bitcoin_hashes = "0.10"
bitcoincore-rpc = "0.16"
chrono = { version = "0.4", features = ["serde"] }
counter = "0.5"
crossbeam = "0.8"
diesel = { version = "1.4", features = ["chrono", "numeric", "postgres"] }
dotenv = "0.15"
hex = "0.4"
jsonrpc = "0.12"
jsonrpc-core = "18.0" #{ path = "../jsonrpc/core" }
jsonrpc-pubsub = "18.0" #{ path = "../jsonrpc/pubsub" }
jsonrpc-http-server = "18.0" #{ path = "../jsonrpc/http" }
jsonrpc-ws-server = "18.0" #{ path = "../jsonrpc/ws" }
log = "0.4"
mockall = "0.11"
rand = "0.8"
rayon = "1.5"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
threadpool = "1.8"
tracing-appender = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.4"
